adding containers to site

--- a/index.html
+++ b/index.html
@@ -25,22 +25,86 @@
       <a class="navbar-brand" href="#">brand name: Ethan Ryan</a>
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
+
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="#about">About</a>
           </li>
+
           <li class="nav-item">
-            <a class="nav-link disabled" href="#">Disabled</a>
+            <a class="nav-link" href="#skills">Skills</a>
           </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="#interests">Interests</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="#work">Work</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="#references">References</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="#contact">Contact</a>
+          </li>
+
         </ul>
       </div>
     </nav>
 
     <div class="container">
+      <div class="jumbotron" id="home">
+        <h1>Ethan Ryan - portfolio site - Welcome</h1>
+        <p class="lead">Hello! Welcome to my site. This is a super simple first draft. Don't worry, it's gonna get better. But hey, gotta start somewhere.</p>
+        <a class="btn btn-lg btn-primary" href="../../components/navbar/" role="button">This is a big blue button</a>
+      </div>
+    </div>
+
+    <div class="container" id="about">
       <div class="jumbotron">
-        <h1>Ethan Ryan portofolio page</h1>
+        <h1>Ethan Ryan - About</h1>
+        <p class="lead">Hello! Welcome to my site. This is a super simple first draft. Don't worry, it's gonna get better. But hey, gotta start somewhere.</p>
+        <a class="btn btn-lg btn-primary" href="../../components/navbar/" role="button">This is a big blue button</a>
+      </div>
+    </div>
+
+    <div class="container" id="skills">
+      <div class="jumbotron">
+        <h1>Ethan Ryan - Skills</h1>
+        <p class="lead">Hello! Welcome to my site. This is a super simple first draft. Don't worry, it's gonna get better. But hey, gotta start somewhere.</p>
+        <a class="btn btn-lg btn-primary" href="../../components/navbar/" role="button">This is a big blue button</a>
+      </div>
+    </div>
+
+    <div class="container" id="interests">
+      <div class="jumbotron">
+        <h1>Ethan Ryan - Interests</h1>
+        <p class="lead">Hello! Welcome to my site. This is a super simple first draft. Don't worry, it's gonna get better. But hey, gotta start somewhere.</p>
+        <a class="btn btn-lg btn-primary" href="../../components/navbar/" role="button">This is a big blue button</a>
+      </div>
+    </div>
+
+    <div class="container" id="work">
+      <div class="jumbotron">
+        <h1>Ethan Ryan - Work</h1>
+        <p class="lead">Hello! Welcome to my site. This is a super simple first draft. Don't worry, it's gonna get better. But hey, gotta start somewhere.</p>
+        <a class="btn btn-lg btn-primary" href="../../components/navbar/" role="button">This is a big blue button</a>
+      </div>
+    </div>
+
+    <div class="container" id="references">
+      <div class="jumbotron">
+        <h1>Ethan Ryan - References</h1>
+        <p class="lead">Hello! Welcome to my site. This is a super simple first draft. Don't worry, it's gonna get better. But hey, gotta start somewhere.</p>
+        <a class="btn btn-lg btn-primary" href="../../components/navbar/" role="button">This is a big blue button</a>
+      </div>
+    </div>
+
+    <div class="container" id="contact">
+      <div class="jumbotron">
+        <h1>Ethan Ryan - Contact</h1>
         <p class="lead">Hello! Welcome to my site. This is a super simple first draft. Don't worry, it's gonna get better. But hey, gotta start somewhere.</p>
         <a class="btn btn-lg btn-primary" href="../../components/navbar/" role="button">This is a big blue button</a>
       </div>
