--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="#">brand name: Ethan Ryan</a>
+      <a class="navbar-brand" href="#home">brand name: Ethan Ryan</a>
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav mr-auto">
 
@@ -54,6 +54,11 @@
       </div>
     </nav>
 
+
+    <div class="background background-forrest">
+        <!-- <div>Full stack web developer with a passion for creative problem solving. With experience in Ruby on Rails and JavaScript based programming, and a background in publishing, business analysis, and law, I discovered web development through a desire to create my own writing portfolio website. I bring strong communication and research skills that help companies make sound business decisions to grow their brand and success.</div> -->
+    </div>
+
     <div class="container">
       <div class="jumbotron" id="home">
         <h1>Ethan Ryan - portfolio site - Welcome</h1>
@@ -62,13 +67,21 @@
       </div>
     </div>
 
+    <div class="background background-forrest">
+    </div>
+
+
     <div class="container" id="about">
-      <div class="jumbotron">
+      <!-- <div class="jumbotron"> -->
         <h1>Ethan Ryan - About</h1>
         <p class="lead">Hello! Welcome to my site. This is a super simple first draft. Don't worry, it's gonna get better. But hey, gotta start somewhere.</p>
         <a class="btn btn-lg btn-primary" href="../../components/navbar/" role="button">This is a big blue button</a>
-      </div>
+      <!-- </div> -->
     </div>
+
+    <div class="background background-forrest">
+    </div>
+
 
     <div class="container" id="skills">
       <div class="jumbotron">
@@ -78,12 +91,19 @@
       </div>
     </div>
 
+    <div class="background background-forrest">
+    </div>
+
+
     <div class="container" id="interests">
       <div class="jumbotron">
         <h1>Ethan Ryan - Interests</h1>
         <p class="lead">Hello! Welcome to my site. This is a super simple first draft. Don't worry, it's gonna get better. But hey, gotta start somewhere.</p>
         <a class="btn btn-lg btn-primary" href="../../components/navbar/" role="button">This is a big blue button</a>
       </div>
+    </div>
+
+    <div class="background background-forrest">
     </div>
 
     <div class="container" id="work">
@@ -94,6 +114,10 @@
       </div>
     </div>
 
+    <div class="background background-forrest">
+    </div>
+
+
     <div class="container" id="references">
       <div class="jumbotron">
         <h1>Ethan Ryan - References</h1>
@@ -102,12 +126,20 @@
       </div>
     </div>
 
+    <div class="background background-forrest">
+    </div>
+
+
     <div class="container" id="contact">
       <div class="jumbotron">
         <h1>Ethan Ryan - Contact</h1>
         <p class="lead">Hello! Welcome to my site. This is a super simple first draft. Don't worry, it's gonna get better. But hey, gotta start somewhere.</p>
         <a class="btn btn-lg btn-primary" href="../../components/navbar/" role="button">This is a big blue button</a>
       </div>
+    </div>
+
+    <div class="background background-forrest">
+        <!-- <div>Full stack web developer with a passion for creative problem solving. With experience in Ruby on Rails and JavaScript based programming, and a background in publishing, business analysis, and law, I discovered web development through a desire to create my own writing portfolio website. I bring strong communication and research skills that help companies make sound business decisions to grow their brand and success.</div> -->
     </div>
 
 
