adding text to each page

--- a/index.html
+++ b/index.html
@@ -55,14 +55,11 @@
     </nav>
 
 
-    <div class="background background-forrest">
-        <!-- <div>Full stack web developer with a passion for creative problem solving. With experience in Ruby on Rails and JavaScript based programming, and a background in publishing, business analysis, and law, I discovered web development through a desire to create my own writing portfolio website. I bring strong communication and research skills that help companies make sound business decisions to grow their brand and success.</div> -->
-    </div>
-
     <div class="container">
       <div class="jumbotron" id="home">
         <h1>Ethan Ryan - portfolio site - Welcome</h1>
         <p class="lead">Hello! Welcome to my site. This is a super simple first draft. Don't worry, it's gonna get better. But hey, gotta start somewhere.</p>
+        (maybe add radio buttons here, clicking each changes background gif... three buttons: crazy / sexy / cool)
         <a class="btn btn-lg btn-primary" href="../../components/navbar/" role="button">This is a big blue button</a>
       </div>
     </div>
@@ -74,7 +71,36 @@
     <div class="container" id="about">
       <!-- <div class="jumbotron"> -->
         <h1>Ethan Ryan - About</h1>
-        <p class="lead">Hello! Welcome to my site. This is a super simple first draft. Don't worry, it's gonna get better. But hey, gotta start somewhere.</p>
+        <h1>Web Developer | Writer</h1>
+        <h2>Spectacular Human Being, Very Passionate, Extremely Humble</h2>
+        <p class="lead">
+          Ethan Ryan is a full stack web developer with a passion for creative problem solving.
+        </p>
+        <p class="lead">
+          With experience in Ruby on Rails and JavaScript,
+          and a background in publishing, business analysis, and law,
+          Ethan Ryan discovered web development through a desire to create
+          his own writing portfolio website. (link to old site)
+        </p>
+        <p class="lead">
+          Ethan Ryan brings strong communication and research skills that help companies grow and succeed.
+        </p>
+        <p class="lead">
+          Ethan Ryan created this website, but he keeps talking in third person to maximize that sweet, sweet SEO.
+        </p>
+          <p class="lead">
+          Ethan Ryan, Ethan Ryan, Ethan Ryan.
+        </p>
+          <p class="lead">
+          Other notable Ethans include:
+          <ul>
+            <li>Ethan Hawke - actor and writer, who's wife's name is Ryan, which really screws up Ethan Ryan's SEO.</li>
+            <li>Ethan Allen - American patriot, Green Mountain Boy, and namesake of Ethan Allen Furniture.<br>
+              Or is Ethan Allen Furniture the namesake of Ethan Allen, the Green Mountain Boy?<br>
+              I'm not totally sure what 'namesake' means, but either way, Ethan Allen was an Ethan too.</li>
+            <li>Ethan Ryan - football player, AKA soccer player, and no, this pro-athlete is not me, Ethan Ryan, writer and web developer, though I'm sure he sometimes thinks: "man, it must be so fun to be a writer and web developer, instead of a professional athelete."</li>
+          </ul>
+        </p>
         <a class="btn btn-lg btn-primary" href="../../components/navbar/" role="button">This is a big blue button</a>
       <!-- </div> -->
     </div>
@@ -86,7 +112,18 @@
     <div class="container" id="skills">
       <div class="jumbotron">
         <h1>Ethan Ryan - Skills</h1>
-        <p class="lead">Hello! Welcome to my site. This is a super simple first draft. Don't worry, it's gonna get better. But hey, gotta start somewhere.</p>
+        <ul>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>Ruby</li>
+          <li>Ruby on Rails</li>
+          <li>SQL</li>
+          <li>Git</li>
+          <li>JavaScript</li>
+          <li>jQuery</li>
+          <li>React</li>
+          <li>WordPress</li>
+        </ul>
         <a class="btn btn-lg btn-primary" href="../../components/navbar/" role="button">This is a big blue button</a>
       </div>
     </div>
@@ -98,7 +135,25 @@
     <div class="container" id="interests">
       <div class="jumbotron">
         <h1>Ethan Ryan - Interests</h1>
-        <p class="lead">Hello! Welcome to my site. This is a super simple first draft. Don't worry, it's gonna get better. But hey, gotta start somewhere.</p>
+        <p class="lead">
+          Ethan Ryan loves humor, horror, and pop culture.<br>
+          (more here, maybe can click on each word above for gifs, make 'pop culture' random)
+        </p>
+        <p class="lead">
+          His <a href="http://www.ethanryan.net/writing/">creative writing</a> has appeared in print and online.
+        </p>
+        <p class="lead">
+          He's also done some ghostwriting. He enjoys helping people bring their story ideas to life as novels and screenplays, and enjoys the challenge of helping companies gain attention for their products and services via quality content and backlinks.
+        </p>
+        <p class="lead">
+          He's done some standup comedy. (link to youtube)
+        </p>
+        <p class="lead">
+          He's also made some Twitterbots.
+        </p>
+        <p class="lead">
+          He loves making jokes, making apps, and making $$$.
+        </p>
         <a class="btn btn-lg btn-primary" href="../../components/navbar/" role="button">This is a big blue button</a>
       </div>
     </div>
@@ -121,7 +176,14 @@
     <div class="container" id="references">
       <div class="jumbotron">
         <h1>Ethan Ryan - References</h1>
-        <p class="lead">Hello! Welcome to my site. This is a super simple first draft. Don't worry, it's gonna get better. But hey, gotta start somewhere.</p>
+        <ul>
+          <li>"Ethan Ryan is the only person I've ever met whose raw intelligence intimidated the crap out of me." - Elon Musk</li>
+          <li>"Forceful, cerebral, and impeccably controlled." - Michiko Kakutani</li>
+          <li>"Ethan Ryan is my inspiration and my muse." - Oprah</li>
+          <li>"Five stars." - Yelp</li>
+          <li>"Two thumbs up." - Siskel and Ebert</li>
+          <li>"Last name: Ever, First name: Greatest." - Drake (when asked to describe Ethan Ryan)</li>
+        </ul>
         <a class="btn btn-lg btn-primary" href="../../components/navbar/" role="button">This is a big blue button</a>
       </div>
     </div>
@@ -133,7 +195,22 @@
     <div class="container" id="contact">
       <div class="jumbotron">
         <h1>Ethan Ryan - Contact</h1>
-        <p class="lead">Hello! Welcome to my site. This is a super simple first draft. Don't worry, it's gonna get better. But hey, gotta start somewhere.</p>
+        <p class="lead">
+          Ethan Ryan checks his inbox compulsively and responds sporadically.
+          He both craves and fears attention.
+          Fill him with joy and terror by writing to him here:
+          <br>
+          ethanryan@gmail.com
+          <br>
+          Also feel free to get in touch via social media, where you can friend or follow or stalk at your leisure:
+          <br>
+          <ul>
+            <li>LinkedIn (icon)</li>
+            <li>GitHub (icon)</li>
+            <li>Medium (icon)</li>
+            <li>Twitter (icon)</li>
+          </ul>
+        </p>
         <a class="btn btn-lg btn-primary" href="../../components/navbar/" role="button">This is a big blue button</a>
       </div>
     </div>
