fixed typo on about page

--- a/index.html
+++ b/index.html
@@ -87,14 +87,12 @@
         </p>
         <p class="lead">
           Ethan Ryan created this website, but he keeps talking in third person to maximize that sweet, sweet SEO.
-        </p>
-          <p class="lead">
           Ethan Ryan, Ethan Ryan, Ethan Ryan.
         </p>
           <p class="lead">
           Other notable Ethans include:
           <ul>
-            <li>Ethan Hawke - actor and writer, who's wife's name is Ryan, which really screws up Ethan Ryan's SEO.</li>
+            <li>Ethan Hawke - actor and writer, whose wife's name is Ryan, which really screws up Ethan Ryan's SEO.</li>
             <li>Ethan Allen - American patriot, Green Mountain Boy, and namesake of Ethan Allen Furniture.<br>
               Or is Ethan Allen Furniture the namesake of Ethan Allen, the Green Mountain Boy?<br>
               I'm not totally sure what 'namesake' means, but either way, Ethan Allen was an Ethan too.</li>
