adding js file and first app, rotateWord

--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
         <h1>Ethan Ryan - portfolio site - Welcome</h1>
         <p class="lead">Hello! Welcome to my site. This is a super simple first draft. Don't worry, it's gonna get better. But hey, gotta start somewhere.</p>
         (maybe add radio buttons here, clicking each changes background gif... three buttons: crazy / sexy / cool)
+        <br><br>
+        <h1>Ethan Ryan is <span id="rotate_word">cool</span>.</h1>
+        <br><br>
         <a class="btn btn-lg btn-primary" href="../../components/navbar/" role="button">This is a big blue button</a>
       </div>
     </div>
@@ -252,5 +255,6 @@ A productivity app to managed daily tasks and demonstrate gamification elements 
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
