adding bootstrap-social media icons for contact page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <!-- Font Awesome CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <!-- Bootstrap Social CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.css">
 
     <!-- my custom styles for this site -->
     <link href="stylesheet.css" rel="stylesheet">
@@ -230,19 +234,45 @@ A productivity app to managed daily tasks and demonstrate gamification elements 
           Ethan Ryan checks his inbox compulsively and responds sporadically.
           He both craves and fears attention.
           Fill him with joy and terror by writing to him here:
-          <br>
           ethanryan@gmail.com
+          <br><br>
+          Or get in touch via social media, where you can friend him or follow him or stalk him at your leisure:
           <br>
-          Also feel free to get in touch via social media, where you can friend or follow or stalk at your leisure:
-          <br>
-          <ul>
-            <li>LinkedIn (icon)</li>
-            <li>GitHub (icon)</li>
-            <li>Medium (icon)</li>
-            <li>Twitter (icon)</li>
-          </ul>
+
+          <!-- <div class="row">
+            <div class="col-sm">col-sm</div>
+            <div class="col-sm">col-sm</div>
+            <div class="col-sm">col-sm</div>
+            <div class="col-sm">col-sm</div>
+          </div> -->
+
+          <div class="row">
+
+            <div class="col-sm">
+            <a class="btn btn-block btn-social btn-linkedin" href="https://www.linkedin.com/in/ethanryan/">
+              <span class="fa fa-linkedin"></span> LinkedIn
+            </a>
+            </div>
+
+            <div class="col-sm">
+            <a class="btn btn-block btn-social btn-github" href="https://www.github.com/ethanryan/">
+              <span class="fa fa-github"></span> GitHub
+            </a>
+            </div>
+
+            <div class="col-sm">
+            <a class="btn btn-block btn-social btn-medium" href="https://www.medium.com/@ethanryan/">
+              <span class="fa fa-medium"></span> Medium
+            </a>
+            </div>
+
+            <div class="col-sm">
+            <a class="btn btn-block btn-social btn-twitter" href="https://www.twitter.com/wordnerd/">
+              <span class="fa fa-twitter"></span> Twitter
+            </a>
+            </div>
+
         </p>
-        <a class="btn btn-lg btn-primary" href="../../components/navbar/" role="button">This is a big blue button</a>
       </div>
     </div>
 
