added color changes to email address

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ A productivity app to managed daily tasks and demonstrate gamification elements 
           Ethan Ryan checks his inbox compulsively and responds sporadically.
           He both craves and fears attention.
           Fill him with joy and terror by writing to him here:
-          ethanryan@gmail.com
+          <span class="email-address">ethanryan@gmail.com</span>
           <br><br>
           Or get in touch via social media, where you can friend him or follow him or stalk him at your leisure:
           <br>
