--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
 
-  <nav class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-inverse">
+  <nav class="navbar navbar-toggleable-md navbar-inverse sticky-top bg-primary">
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -59,10 +59,9 @@
   </nav>
 
 
+  <div class="jumbotron jumbotron-fluid" id="home">
   <div class="container">
-    <div class="jumbotron" id="home">
-      <h1 class="text-center">Ethan Ryan - portfolio site - Welcome</h1>
-      <p class="lead">Hello! Welcome to my site. This is a super simple first draft. Don't worry, it's gonna get better. But hey, gotta start somewhere.</p>
+      <h1 class="text-center">Welcome</h1>
       <br><br>
       <h1>Ethan Ryan is <span id="rotate_word">cool</span>.</h1>
       <br><br>
@@ -75,7 +74,7 @@
 
 
   <div class="container" id="about">
-    <!-- <div class="jumbotron"> -->
+    <div class="jumbotron">
     <h1 class="text-center">Ethan Ryan - About</h1>
 
     <div class="text-center">
@@ -123,7 +122,7 @@
     </p>
 
     <a class="btn btn-lg btn-primary" href="../../components/navbar/" role="button">This is a big blue button</a>
-    <!-- </div> -->
+    </div>
   </div>
 
   <div class="background background-forrest">
@@ -154,6 +153,7 @@
 
 
   <div class="container" id="interests">
+    <div class="jumbotron">
       <h1 class="text-center">Ethan Ryan - Interests</h1>
       <p class="lead">
         Ethan Ryan loves humor, horror, and pop culture.<br>
@@ -183,6 +183,7 @@
         (maybe add radio buttons here, clicking each changes background gif... three buttons: crazy / sexy / cool)
       </p>
       <a class="btn btn-lg btn-primary" href="../../components/navbar/" role="button">This is a big blue button</a>
+  </div>
   </div>
 
   <div class="background background-forrest">
@@ -262,6 +263,60 @@
   <div class="container" id="references">
     <div class="jumbotron">
       <h1 class="text-center">Ethan Ryan - References</h1>
+
+      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#myCarousel" data-slide-to="1"></li>
+          <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner" role="listbox">
+          <div class="carousel-item active">
+            <!-- <img class="first-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="First slide"> -->
+            <!-- <img class="rounded-circle" src="assets/elon-musk.png" alt="Elon Musk" width="140" height="140"> -->
+
+            <div class="container">
+              <div class="carousel-caption d-none d-md-block text-left">
+                <div class="text-center">
+                  <img class="second-slide rounded-circle" src="assets/elon-musk.png" alt="Elon Musk" width="200" height="200">
+                </div>
+                <h1>"Ethan Ryan is the only person I've ever met whose raw intelligence intimidated the crap out of me."</h1>
+                <h1 class="text-right"> - Elon Musk</h1>
+              </div>
+            </div>
+
+          </div>
+          <div class="carousel-item">
+            <img class="second-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
+            <div class="container">
+              <div class="carousel-caption d-none d-md-block">
+                <h1>Another example headline.</h1>
+                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
+            <div class="container">
+              <div class="carousel-caption d-none d-md-block text-right">
+                <h1>One more for good measure.</h1>
+                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+
       <ul>
         <li>"Ethan Ryan is the only person I've ever met whose raw intelligence intimidated the crap out of me." - Elon Musk</li>
         <li>"Forceful, cerebral, and impeccably controlled." - Michiko Kakutani</li>
@@ -271,7 +326,7 @@
         <li>"Last name: Ever, First name: Greatest." - Drake (when asked to describe Ethan Ryan)</li>
       </ul>
       <a class="btn btn-lg btn-primary" href="../../components/navbar/" role="button">This is a big blue button</a>
-    </div>
+  </div>
   </div>
 
   <div class="background background-forrest">
@@ -325,6 +380,7 @@
 
       </p>
     </div>
+  </div>
   </div>
 
   <div class="background background-forrest">
