--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     </div>
   </nav>
 
+<!-- welcome page -->
 
   <div class="jumbotron jumbotron-fluid" id="home">
   <div class="container">
@@ -72,9 +73,10 @@
   <div class="background background-forrest">
   </div>
 
+<!-- about page -->
 
-  <div class="container" id="about">
-    <div class="jumbotron">
+  <div class="jumbotron jumbotron-fluid" id="about">
+  <div class="container">
     <h1 class="text-center">Ethan Ryan - About</h1>
 
     <div class="text-center">
@@ -128,9 +130,10 @@
   <div class="background background-forrest">
   </div>
 
+<!-- skills page -->
 
-  <div class="container" id="skills">
-    <div class="jumbotron">
+  <div class="jumbotron jumbotron-fluid" id="skills">
+  <div class="container">
       <h1 class="text-center">Ethan Ryan - Skills</h1>
       <ul>
         <li>HTML</li>
@@ -151,9 +154,10 @@
   <div class="background background-forrest">
   </div>
 
+<!-- interests page -->
 
-  <div class="container" id="interests">
-    <div class="jumbotron">
+  <div class="jumbotron jumbotron-fluid" id="interests">
+  <div class="container">
       <h1 class="text-center">Ethan Ryan - Interests</h1>
       <p class="lead">
         Ethan Ryan loves humor, horror, and pop culture.<br>
@@ -189,8 +193,10 @@
   <div class="background background-forrest">
   </div>
 
-  <div class="container" id="work">
-    <div class="jumbotron">
+<!-- work page -->
+
+  <div class="jumbotron jumbotron-fluid" id="work">
+  <div class="container">
       <h1 class="text-center">Ethan Ryan - Work</h1>
       <br>
 
@@ -259,71 +265,18 @@
   <div class="background background-forrest">
   </div>
 
+<!-- references -->
 
-  <div class="container" id="references">
-    <div class="jumbotron">
+  <div class="jumbotron jumbotron-fluid" id="references">
+  <div class="container">
       <h1 class="text-center">Ethan Ryan - References</h1>
-
-      <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-          <li data-target="#myCarousel" data-slide-to="1"></li>
-          <li data-target="#myCarousel" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner" role="listbox">
-          <div class="carousel-item active">
-            <!-- <img class="first-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="First slide"> -->
-            <!-- <img class="rounded-circle" src="assets/elon-musk.png" alt="Elon Musk" width="140" height="140"> -->
-
-            <div class="container">
-              <div class="carousel-caption d-none d-md-block text-left">
-                <div class="text-center">
-                  <img class="second-slide rounded-circle" src="assets/elon-musk.png" alt="Elon Musk" width="200" height="200">
-                </div>
-                <h1>"Ethan Ryan is the only person I've ever met whose raw intelligence intimidated the crap out of me."</h1>
-                <h1 class="text-right"> - Elon Musk</h1>
-              </div>
-            </div>
-
-          </div>
-          <div class="carousel-item">
-            <img class="second-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
-            <div class="container">
-              <div class="carousel-caption d-none d-md-block">
-                <h1>Another example headline.</h1>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
-            <div class="container">
-              <div class="carousel-caption d-none d-md-block text-right">
-                <h1>One more for good measure.</h1>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-      </div>
 
       <ul>
         <li>"Ethan Ryan is the only person I've ever met whose raw intelligence intimidated the crap out of me." - Elon Musk</li>
         <li>"Forceful, cerebral, and impeccably controlled." - Michiko Kakutani</li>
-        <li>"Ethan Ryan is my inspiration and my muse." - Oprah</li>
+        <li>"Ethan Ryan is my inspiration and my muse. His compassion knows no bounds." - Oprah</li>
         <li>"Five stars." - Yelp</li>
-        <li>"Two thumbs up." - Siskel and Ebert</li>
-        <li>"Last name: Ever, First name: Greatest." - Drake (when asked to describe Ethan Ryan)</li>
+        <li>"Two thumbs up. Way up!" - Siskel and Ebert</li>
       </ul>
       <a class="btn btn-lg btn-primary" href="../../components/navbar/" role="button">This is a big blue button</a>
   </div>
@@ -332,9 +285,10 @@
   <div class="background background-forrest">
   </div>
 
+<!-- contact page -->
 
-  <div class="container" id="contact">
-    <div class="jumbotron">
+  <div class="jumbotron jumbotron-fluid" id="contact">
+  <div class="container">
       <h1 class="text-center">Ethan Ryan - Contact</h1>
       <p class="lead">
         Ethan Ryan checks his inbox compulsively and responds sporadically.
