added min-height to rotate_word_container to fix content jumping issue

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
 
-  <nav class="navbar navbar-toggleable-md navbar-inverse sticky-top bg-primary">
+  <nav class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-primary">
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -61,7 +61,7 @@
 <!-- welcome page -->
 
   <div class="jumbotron jumbotron-fluid" id="home">
-  <div class="container">
+    <div class="container" id="rotate_word_container">
       <h1 class="text-center">Welcome</h1>
       <br><br>
       <h1>Ethan Ryan is <span id="rotate_word">cool</span>.</h1>
