rotating profile pics on about page

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="navbar-brand" href="#home">brand name: Ethan Ryan</a>
+    <a class="navbar-brand" href="">brand name: Ethan Ryan</a>
+    <!-- do i need a # in href above? don't think i want/need to call it home -->
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav mr-auto">
 
@@ -79,9 +80,13 @@
   <div class="container">
     <h1 class="text-center">Ethan Ryan - About</h1>
 
-    <div class="text-center">
+    <!-- <div class="text-center">
       <img src="assets/profile_pic_Ethan_Ryan.jpg" class="rounded" alt="Ethan Ryan profile picture">
+    </div> -->
+
+    <div id="profile-pic">
     </div>
+
 
     <h1 class="text-center">Web Developer | Writer</h1>
     <h2 class="text-center">Spectacular Human Being, Very Passionate</h2>
