added shimmer effect on text

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     <h1 class="text-center">Web Developer | Writer</h1>
     <h2 class="text-center">Spectacular Human Being, Very Passionate</h2>
-    <h2 class="text-center">Extremely Humble</h2>
+    <h2 class="text-center"><span class="shimmer">Extremely Humble</span></h2>
     <p class="lead">
       Ethan Ryan is a full stack web developer with a passion for creative problem solving.
     </p>
