made navbar collapse onclick on mobile

--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
 <body>
 
   <nav class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-primary">
-    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler navbar-toggler-right"
+    type="button"
+    data-toggle="collapse"
+    data-target="#navbarCollapse"
+    aria-controls="navbarCollapse"
+    aria-expanded="false"
+    aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <a class="navbar-brand" href="">brand name: Ethan Ryan</a>
@@ -32,27 +38,27 @@
       <ul class="navbar-nav mr-auto">
 
         <li class="nav-item">
-          <a class="nav-link" href="#about">About</a>
+          <a class="nav-link" href="#about" data-toggle="collapse" data-target=".navbar-collapse.show">About</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="#skills">Skills</a>
+          <a class="nav-link" href="#skills" data-toggle="collapse" data-target=".navbar-collapse.show">Skills</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="#interests">Interests</a>
+          <a class="nav-link" href="#interests" data-toggle="collapse" data-target=".navbar-collapse.show">Interests</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="#work">Work</a>
+          <a class="nav-link" href="#work" data-toggle="collapse" data-target=".navbar-collapse.show">Work</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="#references">References</a>
+          <a class="nav-link" href="#references" data-toggle="collapse" data-target=".navbar-collapse.show">References</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="#contact">Contact</a>
+          <a class="nav-link" href="#contact" data-toggle="collapse" data-target=".navbar-collapse.show">Contact</a>
         </li>
 
       </ul>
@@ -252,7 +258,6 @@
         </li>
       </ul>
       </p>
-
 
       <hr/>
 
