fixed navbar mobile collapse using jquery instead of other way, which didn't work

--- a/index.html
+++ b/index.html
@@ -38,27 +38,27 @@
       <ul class="navbar-nav mr-auto">
 
         <li class="nav-item">
-          <a class="nav-link" href="#about" data-toggle="collapse" data-target=".navbar-collapse.show">About</a>
+          <a class="nav-link" href="#about">About</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="#skills" data-toggle="collapse" data-target=".navbar-collapse.show">Skills</a>
+          <a class="nav-link" href="#skills">Skills</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="#interests" data-toggle="collapse" data-target=".navbar-collapse.show">Interests</a>
+          <a class="nav-link" href="#interests">Interests</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="#work" data-toggle="collapse" data-target=".navbar-collapse.show">Work</a>
+          <a class="nav-link" href="#work">Work</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="#references" data-toggle="collapse" data-target=".navbar-collapse.show">References</a>
+          <a class="nav-link" href="#references">References</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="#contact" data-toggle="collapse" data-target=".navbar-collapse.show">Contact</a>
+          <a class="nav-link" href="#contact">Contact</a>
         </li>
 
       </ul>
