--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="navbar-brand" href="">brand name: Ethan Ryan</a>
+    <a class="navbar-brand" href=""><span class="shimmer-brand">brand name: Ethan Ryan</span></a>
     <!-- do i need a # in href above? don't think i want/need to call it home -->
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav mr-auto">
