changed background image to gif so it looks good on mobile, need all images to have lots of pixels

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <br><br>
       <h1>Ethan Ryan is <span id="rotate_word">cool</span>.</h1>
       <br><br>
-      <a class="btn btn-lg btn-primary" href="../../components/navbar/" role="button">This is a big blue button</a>
+      <!-- <a class="btn btn-lg btn-primary" href="../../components/navbar/" role="button">This is a big blue button</a> -->
     </div>
   </div>
 
@@ -158,7 +158,7 @@
         <li>React</li>
         <li>WordPress</li>
       </ul>
-      <a class="btn btn-lg btn-primary" href="../../components/navbar/" role="button">This is a big blue button</a>
+      <!-- <a class="btn btn-lg btn-primary" href="../../components/navbar/" role="button">This is a big blue button</a> -->
     </div>
   </div>
 
@@ -197,7 +197,7 @@
       <p>
         (maybe add radio buttons here, clicking each changes background gif... three buttons: crazy / sexy / cool)
       </p>
-      <a class="btn btn-lg btn-primary" href="../../components/navbar/" role="button">This is a big blue button</a>
+      <!-- <a class="btn btn-lg btn-primary" href="../../components/navbar/" role="button">This is a big blue button</a> -->
   </div>
   </div>
 
@@ -277,7 +277,7 @@
         </li>
       </p>
 
-      <a class="btn btn-lg btn-primary" href="../../components/navbar/" role="button">This is a big blue button</a>
+      <!-- <a class="btn btn-lg btn-primary" href="../../components/navbar/" role="button">This is a big blue button</a> -->
     </div>
   </div>
 
@@ -297,7 +297,7 @@
         <li>"Five stars." - Yelp</li>
         <li>"Two thumbs up. Way up!" - Siskel and Ebert</li>
       </ul>
-      <a class="btn btn-lg btn-primary" href="../../components/navbar/" role="button">This is a big blue button</a>
+      <!-- <a class="btn btn-lg btn-primary" href="../../components/navbar/" role="button">This is a big blue button</a> -->
   </div>
   </div>
 
