put skills in two columns

--- a/index.html
+++ b/index.html
@@ -146,20 +146,26 @@
   <div class="jumbotron jumbotron-fluid" id="skills">
   <div class="container">
       <h1 class="text-center">Ethan Ryan - Skills</h1>
-      <ul>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>Ruby</li>
-        <li>Ruby on Rails</li>
-        <li>SQL</li>
-        <li>Git</li>
-        <li>JavaScript</li>
-        <li>jQuery</li>
-        <li>React</li>
-        <li>WordPress</li>
-      </ul>
-      <!-- <a class="btn btn-lg btn-primary" href="../../components/navbar/" role="button">This is a big blue button</a> -->
-    </div>
+
+      <div class="row justify-content-center">
+        <div class="col-4 list-unstyled">
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>Ruby</li>
+          <li>Ruby on Rails</li>
+          <li>SQL</li>
+        </div>
+
+        <div class="col-4 list-unstyled">
+          <li>JavaScript</li>
+          <li>jQuery</li>
+          <li>React</li>
+          <li>Git</li>
+          <li>WordPress</li>
+        </div>
+      </div>
+
+    </div><!-- end of container -->
   </div>
 
   <div class="background background-forrest">
@@ -172,7 +178,7 @@
       <h1 class="text-center">Ethan Ryan - Interests</h1>
       <p class="lead">
         Ethan Ryan loves humor, horror, and pop culture.<br>
-        (more here, maybe can click on each word above for gifs, make 'pop culture' random)
+        <!-- (more here, maybe can click on each word above for gifs, make 'pop culture' random) -->
       </p>
       <p class="lead">
         His <a href="http://www.ethanryan.net/writing/" target="blank">creative writing</a> has appeared in print and online.
@@ -195,7 +201,7 @@
       </p>
 
       <p>
-        (maybe add radio buttons here, clicking each changes background gif... three buttons: crazy / sexy / cool)
+        <!-- (maybe add radio buttons here, clicking each changes background gif... three buttons: crazy / sexy / cool) -->
       </p>
       <!-- <a class="btn btn-lg btn-primary" href="../../components/navbar/" role="button">This is a big blue button</a> -->
   </div>
