added scrollspy to navbar and body

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
   <link href="stylesheet.css" rel="stylesheet">
 </head>
 
-<body>
+<body data-spy="scroll" data-target=".navbar">
+
 
   <nav class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-primary">
     <button class="navbar-toggler navbar-toggler-right"
