--- a/index.html
+++ b/index.html
@@ -94,7 +94,6 @@
   <div id="profile-pic">
   </div>
 
-
   <h1 class="text-center">Web Developer | Writer</h1>
   <h2 class="text-center">Spectacular Human Being, Very Passionate</h2>
   <h2 class="text-center"><span class="shimmer">Extremely Humble</span></h2>
@@ -146,27 +145,25 @@
 
 <div class="jumbotron jumbotron-fluid" id="skills">
   <div class="container">
-    <h1 class="text-center">Ethan Ryan - Skills</h1>
+    <h1 class="text-center">Ethan Ryan - <span class="hoverSkill pulse-grow">Skills</span></h1>
 
-  <br><br>
-    <span class="hvr-pulse-grow">Pulse Grow</span> and no grow
   <br><br>
 
     <div class="row justify-content-center">
       <div class="col-4 list-unstyled">
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>Ruby</li>
-        <li>Ruby on Rails</li>
-        <li>SQL</li>
+        <li><span class="hoverSkill pulse-grow">HTML</span></li>
+        <li><span class="hoverSkill pulse-grow">CSS</span></li>
+        <li><span class="hoverSkill pulse-grow">Ruby</span></li>
+        <li><span class="hoverSkill pulse-grow">Ruby on Rails</span></li>
+        <li><span class="hoverSkill pulse-grow">SQL</span></li>
       </div>
 
       <div class="col-4 list-unstyled">
-        <li>JavaScript</li>
-        <li>jQuery</li>
-        <li>React</li>
-        <li>Git</li>
-        <li>WordPress</li>
+        <li><span class="hoverSkill pulse-grow">JavaScript</span></li>
+        <li><span class="hoverSkill pulse-grow">jQuery</span></li>
+        <li><span class="hoverSkill pulse-grow">React</span></li>
+        <li><span class="hoverSkill pulse-grow">Git</span></li>
+        <li><span class="hoverSkill pulse-grow">WordPress</span></li>
       </div>
     </div>
 
