--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <a class="navbar-brand" href=""><span class="shimmer-brand">brand name: Ethan Ryan</span></a>
+  <a class="navbar-brand" href=""><span class="shimmer-brand">Ethan Ryan</span></a>
   <!-- do i need a # in href above? don't think i want/need to call it home -->
   <div class="collapse navbar-collapse" id="navbarCollapse">
     <ul class="navbar-nav ml-auto"> <!-- mr is right, ml is left... this puts the links on the left, and since it's reversed, it puts them on the right -->
@@ -74,7 +74,6 @@
     <br><br>
     <h1>Ethan Ryan is <span id="rotate_word">cool</span>.</h1>
     <br><br>
-    <!-- <a class="btn btn-lg btn-primary" href="../../components/navbar/" role="button">This is a big blue button</a> -->
   </div>
 </div>
 
@@ -134,7 +133,6 @@
     Those Ethans all have Wikipedia pages. Maybe one day, I will too. That's when I'll know I've REALLY made it, when I can join that pantheon of illustrious Ethans.
   </p>
 
-  <a class="btn btn-lg btn-primary" href="../../components/navbar/" role="button">This is a big blue button</a>
 </div>
 </div>
 
@@ -147,7 +145,7 @@
   <div class="container">
     <h1 class="text-center">Ethan Ryan - <span class="hoverSkill pulse-grow">Skills</span></h1>
 
-  <br><br>
+    <br><br>
 
     <div class="row justify-content-center">
       <div class="col-4 list-unstyled">
@@ -205,7 +203,7 @@
       <p>
         <!-- (maybe add radio buttons here, clicking each changes background gif... three buttons: crazy / sexy / cool) -->
       </p>
-      <!-- <a class="btn btn-lg btn-primary" href="../../components/navbar/" role="button">This is a big blue button</a> -->
+
     </div>
   </div>
 
@@ -336,12 +334,16 @@
     <div class="container">
       <h1 class="text-center">Ethan Ryan - Contact</h1>
       <p class="lead">
-        Ethan Ryan checks his inbox compulsively and responds sporadically.
+        <!-- Ethan Ryan checks his inbox compulsively and responds sporadically.
         He both craves and fears attention.
-        Fill him with joy and terror by writing to him here:
-        <span class="email-address">ethanryan@gmail.com</span>
-        <br><br>
-        Or get in touch via social media, where you can friend him or follow him or stalk him at your leisure:
+        Fill him with joy and terror by writing to him here: -->
+
+        <p class="text-center">
+          Email me: <span class="email-address">ethanryan@gmail.com</span>
+        </p>
+        <br>
+        Or get in touch via social media, where you can friend me or follow me or stalk me at your leisure:
+        <br>
         <br>
 
         <!-- <div class="row">
@@ -385,6 +387,25 @@
 <div class="background background-forrest">
   <!-- <div>Full stack web developer with a passion for creative problem solving. With experience in Ruby on Rails and JavaScript based programming, and a background in publishing, business analysis, and law, I discovered web development through a desire to create my own writing portfolio website. I bring strong communication and research skills that help companies make sound business decisions to grow their brand and success.</div> -->
 </div>
+
+
+<!-- footer  -->
+
+<!-- <footer class="bd-footer text-muted"> -->
+<footer class="footer">
+  <div class="container">
+    <ul class="bd-footer-links">
+
+      <div class="row list-unstyled">
+        <li class="col-md-3 col-xs-6"><a href="https://www.linkedin.com/in/ethanryan/" target="blank">LinkedIn</a></li>
+        <li class="col-md-3 col-xs-6"><a href="https://www.github.com/ethanryan/" target="blank">GitHub</a></li>
+        <li class="col-md-3 col-xs-6"><a href="https://www.medium.com/@ethanryan/" target="blank">Medium</a></li>
+        <li class="col-md-3 col-xs-6"><a href="https://www.twitter.com/wordnerd/" target="blank">Twitter</a></li>
+      </div>
+
+    </ul>
+  </div>
+</footer>
 
 
 <!-- jQuery first, then Tether, then Bootstrap JS. -->
