fixing background images, cover not contain

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   </div>
 </div>
 
-<div class="background background-forrest">
+<div class="background background-forrest img-fluid">
 </div>
 
 <!-- about page -->
