removed margin from footer

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   </div>
 </div>
 
-<div class="background background-forrest img-fluid">
+<div class="background background-forrest">
 </div>
 
 <!-- about page -->
@@ -391,20 +391,15 @@
 
 <!-- footer  -->
 
-<!-- <footer class="bd-footer text-muted"> -->
-<footer class="footer">
-  <div class="container">
-    <ul class="bd-footer-links">
+<footer class="footer container-fluid my-footer">
 
-      <div class="row list-unstyled">
-        <li class="col-md-3 col-xs-6"><a href="https://www.linkedin.com/in/ethanryan/" target="blank">LinkedIn</a></li>
-        <li class="col-md-3 col-xs-6"><a href="https://www.github.com/ethanryan/" target="blank">GitHub</a></li>
-        <li class="col-md-3 col-xs-6"><a href="https://www.medium.com/@ethanryan/" target="blank">Medium</a></li>
-        <li class="col-md-3 col-xs-6"><a href="https://www.twitter.com/wordnerd/" target="blank">Twitter</a></li>
-      </div>
+    <div class="row text-center">
+      <div class="col-md-3 col-xs-6"><a href="https://www.linkedin.com/in/ethanryan/" target="blank">LinkedIn</a></div>
+      <div class="col-md-3 col-xs-6"><a href="https://www.github.com/ethanryan/" target="blank">GitHub</a></div>
+      <div class="col-md-3 col-xs-6"><a href="https://www.medium.com/@ethanryan/" target="blank">Medium</a></div>
+      <div class="col-md-3 col-xs-6"><a href="https://www.twitter.com/wordnerd/" target="blank">Twitter</a></div>
+    </div>
 
-    </ul>
-  </div>
 </footer>
 
 
@@ -413,5 +408,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 <script type="text/javascript" src="index.js"></script>
+
 </body>
 </html>
